CSS Grid Fundamentals

--- a/style.css
+++ b/style.css
@@ -79,3 +79,12 @@ nav > div:last-child {  /* selects the last child in the nav element, ie LOG*/
     /* Why use CSS Grid? */
         /* CSS Grid is a great option when you have:
             + Any components that would beneifit from a grid-typ layout such as a "profile card", in other words, CSS Grid doesn;t have to apply to the whole page - it can be useful for laying out smaller "components" as well. */
+
+    /* CSS Grid Fundamentals */
+        /* unlike Flexbox, CSS Grid lays out its grid items in two-dimensions */
+        /* CSS Grids have the concept of the following:
+            + Tracks - either a row or column
+            + Cells - a single section
+            + Areas - a x by x section
+            + Gaps */
+        /*  */
